--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
