--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.56.0",
     "@tanstack/react-query": "^5.85.5",
+    "@types/nodemailer": "^7.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^11.0.0",
     "geist": "^1.5.1",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-intersection-observer": "^9.5.3",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
